# hackathon-server

./: .example.env  .gitignore  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
compose/local/: Dockerfile
src/authentication/: serializers.py  views.py
src/education/: __init__.py  exceptions.py  models.py  serializers.py  urls.py  views.py
src/education/migrations/: 0001_initial.py  0002_remove_subject_discipline_delete_discipline.py
src/hackathon_project/: settings.py  urls.py
src/notifications/: models.py  serializers.py  urls.py  views.py
src/notifications/migrations/: 0001_initial.py
src/services/: auth.py  education.py
src/tasks/: apps.py  exceptions.py  models.py  serializers.py  urls.py  views.py
src/tasks/migrations/: 0001_initial.py  0002_alter_grades_value.py
src/tasks/scheduler/: scheduler.py
src/users/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_customuser_age_customuser_group_customuser_role_and_more.py  0003_alter_customuser_age_alter_customuser_first_name_and_more.py  0004_remove_customuser_second_name_alter_customuser_age_and_more.py
